--- a/DemoWE/Views/Requests/_CreatePartial.cshtml
+++ b/DemoWE/Views/Requests/_CreatePartial.cshtml
@@ -1,64 +1,56 @@
 ﻿@model DemoWE.Models.Request
 
-@{
-    ViewData["Title"] = "Create";
-}
+<form id="createForm" asp-action="Create">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<h1>Create</h1>
+    <div class="form-group">
+        <label asp-for="RequestTitle" class="control-label"></label>
+        <input asp-for="RequestTitle" class="form-control" />
+        <span asp-validation-for="RequestTitle" class="text-danger"></span>
+    </div>
 
-<h4>Request</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="RequestTitle" class="control-label"></label>
-                <input asp-for="RequestTitle" class="form-control" />
-                <span asp-validation-for="RequestTitle" class="text-danger"></span>
+    <div class="form-group">
+        <label asp-for="RequestDescription" class="control-label"></label>
+        <input asp-for="RequestDescription" class="form-control" />
+        <span asp-validation-for="RequestDescription" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Status" class="control-label"></label>
+        <select asp-for="Status" asp-items="Html.GetEnumSelectList<Status>()" class="form-control"></select>
+        <span asp-validation-for="Status" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="StartDate" class="control-label"></label>
+        <div class="input-group">
+            <input asp-for="StartDate" class="form-control" type="date" />
+            <div class="input-group-append">
+                <label class="input-group-text">
+                    <input type="checkbox" id="startImmediately" onclick=handleStartDate()>
+                    Start Immediately
+                </label>
             </div>
-            <div class="form-group">
-                <label asp-for="RequestDescription" class="control-label"></label>
-                <input asp-for="RequestDescription" class="form-control" />
-                <span asp-validation-for="RequestDescription" class="text-danger"></span>
-            </div>
-            @* <div class="form-group">
-            <label asp-for="Rfile" class="control-label"></label>
-            <input asp-for="Rfile" class="form-control" />
-            <span asp-validation-for="Rfile" class="text-danger"></span>
-            </div> *@
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" asp-items="Html.GetEnumSelectList<Status>()" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StartDate" class="control-label"></label>
-                <div class="input-group">
-                    <input asp-for="StartDate" class="form-control" type="date" />
-                    <div class="input-group-append">
-                        <label class="input-group-text">
-                            <input type="checkbox" id="startImmediately" onclick="handleStartDate()">
-                            Start Immediately
-                        </label>
-                    </div>
-                </div>
-                <span asp-validation-for="StartDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Deadline" class="control-label"></label>
-                <input asp-for="Deadline" class="form-control" type="date" />
-                <span asp-validation-for="Deadline" class="text-danger"></span>
-            </div>
-             <div class="form-group">
-            <label asp-for="CreatedBy" class="control-label"></label>
-            <input asp-for="CreatedBy" class="form-control" />
-            <span asp-validation-for="CreatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
+        <span asp-validation-for="StartDate" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Deadline" class="control-label"></label>
+        <input asp-for="Deadline" class="form-control" type="date" />
+        <span asp-validation-for="Deadline" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="CreatedBy" class="control-label"></label>
+        <input asp-for="CreatedBy" class="form-control" />
+        <span asp-validation-for="CreatedBy" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-primary" />
+    </div>
+</form>
     </div>
 </div>
 
