--- a/DemoWE/Views/Home/Employee.cshtml
+++ b/DemoWE/Views/Home/Employee.cshtml
@@ -3,80 +3,53 @@
 }
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <p>
-    <asp:Label runat="server" ID="ShowDate"></asp:Label>
+    @* <asp:Label runat="server" ID="ShowDate"></asp:Label> *@
 </p>
 
-
 <div style="position: absolute; top:5%; left: 50%; transform: translateX(-50%); border-radius: 10px; width:80%; height: 20%; padding: 10px; color: white; font-size: 30px;overflow: hidden;
- 
-
-  background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);">
+              background: #9152f8;
+              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+              background: -o-linear-gradient(top, #7579ff, #b224ef);
+              background: -moz-linear-gradient(top, #7579ff, #b224ef);
+              background: linear-gradient(top, #7579ff, #b224ef);">
     <div style=" padding: 30px; left: 50%;">
-
         Hello, @ViewBag.name!<br />
         <span style="color: white;">@DateTime.Now.ToString("dddd")</span>
     </div>
 
     <div style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%);padding: 30px;">
-        <span style="color: white;">@DateTime.Now.ToString("hh:mm tt")</span>
+        <span id="currentTime" style="color: white;"></span>
     </div>
 </div>
+
 <div style="position: absolute; top:35%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height: 15%; padding: 10px; color: white; font-size: 30px;
-background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);
-">
+            background: #9152f8;
+              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+              background: -o-linear-gradient(top, #7579ff, #b224ef);
+              background: -moz-linear-gradient(top, #7579ff, #b224ef);
+              background: linear-gradient(top, #7579ff, #b224ef);"></div>
 
-    
-
-</div>
 <div style="position: absolute; top:55%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height:  15%; padding: 10px; color: white; font-size: 30px;
+            background: #9152f8;
+              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+              background: -o-linear-gradient(top, #7579ff, #b224ef);
+              background: -moz-linear-gradient(top, #7579ff, #b224ef);
+              background: linear-gradient(top, #7579ff, #b224ef);"></div>
 
-background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);
-    ">
-</div>
 <div style="position: absolute; top:35%; left:82%; transform: translateX(-50%);  border-radius: 10px; width:15%; height:  35%; padding: 10px; color: white; font-size: 30px;
-background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);
-">
-</div>
-
+            background: #9152f8;
+              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+              background: -o-linear-gradient(top, #7579ff, #b224ef);
+              background: -moz-linear-gradient(top, #7579ff, #b224ef);
+              background: linear-gradient(top, #7579ff, #b224ef);"></div>
 
 <div style="position: absolute; top:35%; right: 60px; left:35%; width:35%; height:35%;  border-radius: 10px;padding: 25px;
-background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);">
+            background: #9152f8;
+              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+              background: -o-linear-gradient(top, #7579ff, #b224ef);
+              background: -moz-linear-gradient(top, #7579ff, #b224ef);
+              background: linear-gradient(top, #7579ff, #b224ef);">
     <canvas id="myChart" style="max-width:800px;max-height:500px; border-radius: 10px; left:50%; top:50%;"></canvas>
 </div>
 
@@ -87,6 +60,27 @@ background: #9152f8;
 <script type="text/javascript">
 
     $(function () {
+        function getCurrentTime() {
+            var currentTime = new Date();
+            var hours = currentTime.getHours();
+            var minutes = currentTime.getMinutes();
+            var ampm = hours >= 12 ? 'PM' : 'AM';
+            hours = hours % 12;
+            hours = hours ? hours : 12;
+            minutes = minutes < 10 ? '0' + minutes : minutes;
+            var timeString = hours + ':' + minutes + ' ' + ampm;
+            return timeString;
+        }
+
+        function updateCurrentTime() {
+            var currentTimeElement = document.getElementById("currentTime");
+            if (currentTimeElement) {
+                currentTimeElement.innerText = getCurrentTime();
+            }
+        }
+
+        setInterval(updateCurrentTime, 1000);
+
         $.ajax({
             type: "POST",
             url: "/Home/GetData",
@@ -120,33 +114,97 @@ background: #9152f8;
                 },
                 options: {
                     plugins: {
-                            legend: {
-                                display: false,
-                            }
+                        legend: {
+                            display: false,
+                        }
                     },
                     indexAxis: 'y',
                     responsive: true,
                     maintainAspectRatio: false,
                     scales: {
                         position: 'top',
-                        
                         y: {
                             beginAtZero: true,
                             ticks: {
                                 color: 'white' // Set the color of the y-axis labels to white
                             }
-
                         },
                         x: {
                             type: 'time',
                             time: {
                                 unit: 'day',
-                                
                             },
                             ticks: {
-                               color: 'white' // Set the color of the y-axis labels to white
+                                color: 'white' // Set the color of the y-axis labels to white
                             },
                             position: 'top'
+                        }
+                    },
+                    plugins: {
+                        annotation: {
+                            annotations: [{
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x',
+                                value: new Date(_StartData),
+                                borderColor: 'rgba(255, 0, 0, 0.5)',
+                                borderWidth: 2,
+                                label: {
+                                    content: 'Start Date',
+                                    enabled: true,
+                                    position: 'top'
+                                }
+                            }, {
+                                type: 'line',
+                                mode: 'vertical',
+                                scaleID: 'x',
+                                value: new Date(_DeadData),
+                                borderColor: 'rgba(0, 0, 255, 0.5)',
+                                borderWidth: 2,
+                                label: {
+                                    content: 'Deadline',
+                                    enabled: true,
+                                    position: 'top'
+                                }
+                            }]
+                        }
+                    }
+                }
+            });
+
+            // Add lines for each task
+            var ctx = document.getElementById("myChart").getContext("2d");
+            var chart = new Chart(ctx, {
+                type: "line",
+                data: {
+                    labels: _chartLabels,
+                    datasets: [{
+                        label: "Tasks",
+                        data: [_StartData, _DeadData],
+                        borderColor: "rgba(0, 0, 0, 0.5)",
+                        borderWidth: 1,
+                        fill: false
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    scales: {
+                        x: {
+                            type: 'time',
+                            time: {
+                                unit: 'day',
+                            },
+                            ticks: {
+                                color: 'white' // Set the color of the x-axis labels to white
+                            },
+                            position: 'top'
+                        },
+                        y: {
+                            beginAtZero: true,
+                            ticks: {
+                                color: 'white' // Set the color of the y-axis labels to white
+                            }
                         }
                     }
                 }
@@ -158,130 +216,3 @@ background: #9152f8;
         }
     });
 </script>
-
-@* <script type="text/javascript">
-
-    $(function(){
-         $(function () {
-             $.ajax({
-                type: "POST",
-                url: "/Home/GetData",
-                data: "",
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                success: OnSuccessResult,
-                error: OnError
-             });
-         });
-
-         function OnSuccessResult(data) {
-             var _data = data;
-             var _chartLabels = _data[0];
-            var _StartData = _data[1];
-            var _DeadData = _data[2];
-
-             var barColor = ["red", "blue", "green", "yellow", "orange", "purple", "pink", "brown", "grey", "black"];
-
-             new Chart("myChart", {
-                 type: "bar",
-                 data: {
-                     labels: _chartLabels,
-                     datasets: [{
-                         label: "Tasks",
-                         data: [_StartData, _DeadData],
-                         backgroundColor:'rgba(0, 0, 0, 0.2)',
-                         borderColor:'rgba(0, 0, 0, 1)',
-                         borderWidth: 1
-                        }
-                        ]
-                        tension: 0.4,
-                        borderWidth: 0,
-                        borderRadius: 4,
-                        borderSkipped: false,
-                        backgroundColor: "rgba(255, 255, 255, .8)",
-                        maxBarThickness: 6,
-
-                        // data: [_StartData, _DeadData],
-                         backgroundColor: barColor
-                     }]
-                 },
-                options: {
-                    indexAxis: 'y',
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    // plugins: {
-                    //     legend: {
-                    //         display: false,
-                    //     }
-                    // },
-                    // interaction: {
-                    //     intersect: false,
-                    //     mode: 'index',
-                    // },
-                    scales: {
-                        y: {
-                            beginAtZero: true,
-                            // grid: {
-                            //     drawBorder: false,
-                            //     display: true,
-                            //     drawOnChartArea: true,
-                            //     drawTicks: false,
-                            //     borderDash: [5, 5],
-                            //     color: 'rgba(255, 255, 255, .2)'
-                            // },
-                            // ticks: {
-                            //     suggestedMin: 0,
-                            //     suggestedMax: 500,
-                            //     beginAtZero: true,
-                            //     padding: 10,
-                            //     font: {
-                            //         size: 14,
-                            //         weight: 300,
-                            //         family: "Roboto",
-                            //         style: 'normal',
-                            //         lineHeight: 2
-                            //     },
-                            //     color: "#fff"
-                            // },
-                        },
-                        x: {
-                            type: 'time',
-                            time: {
-                                unit: 'day',
-                                displayFormats: {
-                                    day: 'MMM D'
-                                }
-                            },
-
-                            position: 'top',
-                            // grid: {
-                            //     drawBorder: false,
-                            //     display: true,
-                            //     drawOnChartArea: true,
-                            //     drawTicks: false,
-                            //     borderDash: [5, 5],
-                            //     color: 'rgba(255, 255, 255, .2)'
-                            // },
-                            // ticks: {
-                            //     display: true,
-                            //     color: '#f8f9fa',
-                            //     padding: 10,
-                            //     font: {
-                            //         size: 14,
-                            //         weight: 300,
-                            //         family: "Roboto",
-                            //         style: 'normal',
-                            //         lineHeight: 2
-                            //     },
-                            // }
-                        },
-                    },
-                },
-            });
-         }
-
-         function OnError(err) {
-             console.log(err);
-         }
-    });
-</script> *@
