--- a/DemoWE/Views/Users/login.cshtml
+++ b/DemoWE/Views/Users/login.cshtml
@@ -77,7 +77,7 @@
 					</div>
 
 					<div class="text-center p-t-90">
-						<a class="txt1" href="#">
+						<a class="txt1" asp-controller="Users" asp-action="ForgotPassword">
 							Forgot Password?
 						</a>
 					</div>
