--- a/DemoWE/Views/Users/ForgotPassword.cshtml
+++ b/DemoWE/Views/Users/ForgotPassword.cshtml
@@ -56,6 +56,12 @@
                         <h2 class="text-center">Forgot Password</h2>
                     </div>
                     <div class="card-body">
+                        @if (ViewData["ErrorMessage"] != null)
+                        {
+                            <div class="alert alert-danger" role="alert">
+                                @ViewData["ErrorMessage"]
+                            </div>
+                        }
                         <form asp-action="ResetPassword" method="post">
                             <div class="form-group">
                                 <label for="email">Email address:</label>
